--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-streamlit
-datetime
-pandas 
-numpy
-pyxlsb
-openpyxl
-xlsxwriter
-pydrive
-google-cloud-storage
-google_auth_oauthlib
+auth==0.5.3
+google-api-core==2.10.1
+google-api-python-client==2.63.0
+google-auth==2.12.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.5.3
+httplib2==0.20.4
+oauthlib==3.2.1
+streamlit==1.13.0
