--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ google-auth==2.12.0
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.5.3
 httplib2==0.20.4
-oauthlib==3.2.1
-streamlit==1.13.0
+oauthlib==
+streamlit
+pyxlsb
