--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-auth==0.5.3
 google-api-core==2.10.1
 google-api-python-client==2.63.0
-google-auth==2.12.0
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.5.3
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
 httplib2==0.20.4
 oauthlib==
 streamlit
